<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_take_photo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:gravity="center"
                android:text="@string/provider_take_photo"
                android:textColor="@color/color_333"
                android:textSize="@dimen/sp_18" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_2"
                android:background="@color/color_f5f5f5" />

            <TextView
                android:id="@+id/tv_select_photo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:gravity="center"
                android:text="@string/provider_local_select_photo"
                android:textColor="@color/color_333"
                android:textSize="@dimen/sp_18" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_8"
                android:background="@color/color_f5f5f5" />

            <TextView
                android:id="@+id/tv_cance_pop_window"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:gravity="center"
                android:text="@string/provider_cance"
                android:textColor="@color/color_333"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>
    </RelativeLayout>
</layout>
