<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
     <androidx.constraintlayout.widget.ConstraintLayout
         app:layout_constraintVertical_bias="0.4"
         android:layout_width="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/iv_img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:src="@mipmap/success"
             />
         <TextView
             android:id="@+id/tv_tip"
             android:layout_width="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_img"
             android:text="@string/provider_success"
             android:layout_marginTop="@dimen/dp_10"
             android:textColor="@color/colorPrimary"
             android:textSize="@dimen/sp_18"
             android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/tv_content"
             android:layout_width="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_tip"
             android:text="@string/provider_comment_result_tip"
             android:textColor="@color/color_333"
             android:layout_marginTop="@dimen/dp_10"
             android:textSize="@dimen/sp_14"
             android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/tv_wyts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/provider_comment_result_btn_left"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@id/tv_fhdp"
             android:textSize="@dimen/sp_16"
             android:layout_marginTop="@dimen/dp_12"
             android:textColor="@color/white"
             android:layout_marginStart="@dimen/dp_40"
             android:background="@drawable/shape_btn_primary_5"
             app:layout_constraintTop_toBottomOf="@id/tv_content"
             />
         <TextView
             android:id="@+id/tv_fhdp"
             app:layout_constraintLeft_toRightOf="@+id/tv_wyts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintRight_toRightOf="parent"
             android:text="@string/provider_comment_result_btn_right"
             android:layout_marginTop="@dimen/dp_12"
             android:textSize="@dimen/sp_16"
             android:textColor="@color/white"
             android:layout_marginEnd="@dimen/dp_40"
             android:background="@drawable/shape_btn_primary_5"
             app:layout_constraintTop_toBottomOf="@id/tv_content"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>