<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_50"
        android:background="@drawable/shape_white_5"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_20">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginBottom="@dimen/dp_16"
                android:gravity="center"
                android:text="@string/faild_reason"
                android:textColor="@color/txt_black"
                android:textSize="@dimen/sp_17"
                android:textStyle="bold" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_word"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/word_titles"
                            android:textColor="@color/txt_black"
                            android:textSize="@dimen/sp_14"
                            android:textStyle="bold" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycler_word"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/dp_20"
                            android:layout_marginBottom="@dimen/dp_16"
                            android:scrollbars="none" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_0_5"
                            android:layout_marginBottom="@dimen/dp_16"
                            android:background="@color/dividing_line" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_picture"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/picture_titles"
                            android:textColor="@color/txt_black"
                            android:textSize="@dimen/sp_14"
                            android:textStyle="bold" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycler_picture"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/dp_20"
                            android:layout_marginBottom="@dimen/dp_16"
                            android:scrollbars="none" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_0_5"
                            android:layout_marginBottom="@dimen/dp_16"
                            android:background="@color/dividing_line" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_video"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/video_titles"
                            android:textColor="@color/txt_black"
                            android:textSize="@dimen/sp_14"
                            android:textStyle="bold" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycler_video"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/dp_20"
                            android:layout_marginBottom="@dimen/dp_16"
                            android:scrollbars="none" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_0_5"
                            android:layout_marginBottom="@dimen/dp_16"
                            android:background="@color/dividing_line" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_audio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/audio_titles"
                            android:textColor="@color/txt_black"
                            android:textSize="@dimen/sp_14"
                            android:textStyle="bold" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycler_audio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/dp_20"
                            android:layout_marginBottom="@dimen/dp_16"
                            android:scrollbars="none" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@color/dividing_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/main_selector_white_f5_radius"
                    android:gravity="center"
                    android:text="@string/know_titles"
                    android:textColor="@color/txt_black"
                    android:textSize="@dimen/sp_16" />

                <View
                    android:layout_width="@dimen/dp_0_5"
                    android:layout_height="match_parent"
                    android:background="@color/dividing_line" />

                <TextView
                    android:id="@+id/tv_sure"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/main_selector_white_f5_radius"
                    android:gravity="center"
                    android:text="@string/edit_titles"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>
