<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/trans_popwindow_bg"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="@dimen/dp_400"
            android:id="@+id/scroll_scenic_pop"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dp_20">

                <TextView
                    android:id="@+id/txt_scenic_appointment_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/txt_black"
                    android:textSize="@dimen/sp_17"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_scenic_appointment_tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:textColor="@color/color_999"
                    android:textSize="@dimen/sp_12" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0_5"
                    android:layout_marginTop="@dimen/dp_15"
                    android:background="@color/e8e8e8" />

                <TextView
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ticket_appointment_info"
                    android:textColor="@color/txt_black"
                    android:textSize="@dimen/sp_14" />

                <RelativeLayout
                    android:id="@+id/v__scenic_appointment_seting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_11"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_scenic_appointment_seting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ticket_appointment_seting"
                        android:textColor="@color/color_666"
                        android:textSize="@dimen/sp_13" />

                    <TextView
                        android:id="@+id/tv_scenic_appointment_seting_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_12"
                        android:layout_toRightOf="@+id/tv_scenic_appointment_seting"
                        android:textColor="@color/color_333"
                        android:textSize="@dimen/sp_13" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/v_ticket_appointment_cance_oder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_11"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_ticket_appointment_cance_oder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ticket_appointment_cance_oder"
                        android:textColor="@color/color_666"
                        android:textSize="@dimen/sp_13" />

                    <TextView
                        android:id="@+id/tv_ticket_appointment_cance_oder_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_12"
                        android:layout_toRightOf="@+id/tv_ticket_appointment_cance_oder"
                        android:textColor="@color/color_333"
                        android:textSize="@dimen/sp_13" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/v_ticket_appointment_ruyuan_pz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_11"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_ticket_appointment_ruyuan_pz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ticket_appointment_ruyuan_pz"
                        android:textColor="@color/color_666"
                        android:textSize="@dimen/sp_13" />

                    <TextView
                        android:id="@+id/tv_ticket_appointment_ruyuan_pz_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_12"
                        android:layout_toRightOf="@+id/tv_ticket_appointment_ruyuan_pz"
                        android:textColor="@color/color_333"
                        android:textSize="@dimen/sp_13" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/v_ticket_appointment_ruyuan_action"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_11"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_ticket_appointment_ruyuan_action"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ticket_appointment_ruyuan_action"
                        android:textColor="@color/color_666"
                        android:textSize="@dimen/sp_13" />

                    <TextView
                        android:id="@+id/tv_ticket_appointment_ruyuan_action_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_12"
                        android:layout_toRightOf="@+id/tv_ticket_appointment_ruyuan_action"
                        android:textColor="@color/color_333"
                        android:textSize="@dimen/sp_13" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/v_ticket_appointment_runyuan_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_11"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_ticket_appointment_runyuan_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ticket_appointment_runyuan_num"
                        android:textColor="@color/color_666"
                        android:textSize="@dimen/sp_13" />

                    <TextView
                        android:id="@+id/tv_ticket_appointment_runyuan_num_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_12"
                        android:layout_toRightOf="@+id/tv_ticket_appointment_runyuan_num"
                        android:textColor="@color/color_333"
                        android:textSize="@dimen/sp_13" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/v_ticket_appointment_ruyuan_cishu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_11"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_ticket_appointment_ruyuan_cishu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ticket_appointment_ruyuan_cishu"
                        android:textColor="@color/color_666"
                        android:textSize="@dimen/sp_13" />

                    <TextView
                        android:id="@+id/tv_ticket_appointment_ruyuan_cishu_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_12"
                        android:layout_toRightOf="@+id/tv_ticket_appointment_ruyuan_cishu"
                        android:textColor="@color/color_333"
                        android:textSize="@dimen/sp_13" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/v_ticket_appointment_ruyuan_xz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_11"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_ticket_appointment_ruyuan_xz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ticket_appointment_ruyuan_xz"
                        android:textColor="@color/color_666"
                        android:textSize="@dimen/sp_13" />

                    <TextView
                        android:id="@+id/tv_ticket_appointment_ruyuan_xz_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_12"
                        android:layout_toRightOf="@+id/tv_ticket_appointment_ruyuan_xz"
                        android:textColor="@color/color_333"
                        android:textSize="@dimen/sp_13" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/txt_tiket_appointment_cash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:text="@string/ticket_appointment_cash"
                    android:textColor="@color/txt_black"
                    android:textSize="@dimen/sp_14"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txt_tiket_appointment_cash_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_14"
                    android:textColor="@color/color_333"
                    android:textSize="@dimen/sp_13"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</layout>